--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,15 @@
 			<version>1.2</version>
 		</dependency>
 	
-		<!-- Good Time Reservation Program -->	
+		<!-- Good Time Reservation Program -->
+		
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>   
+		</dependency> 
+			
 		<dependency>
 		    <groupId>commons-net</groupId>
 		    <artifactId>commons-net</artifactId>
